--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
         font-weight: bold; /* Make numbers thicker */
         color: #ffffff; /* Ensure the numbers are visible */
     }
+    /* Style for making the graph much smaller and with a dark background */
+    #progressChartContainer {
+        width: 200px; /* Make the graph container much smaller */
+        margin: 20px auto;
+        background-color: rgba(0, 0, 0, 0.8); /* Dark background for the chart */
+        padding: 10px;
+        border-radius: 10px;
+    }
+    #progressChart {
+        max-width: 100%;
+        height: 150px;
+    }
+</style>
 </style>
 </head>
 <body>
