--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     /* Style for making the graph much smaller and with a dark background */
     #progressChartContainer {
         width: 200px; /* Make the graph container much smaller */
+        height: 100px; /* Start with this and adjust if needed */
         margin: 20px auto;
         background-color: rgba(0, 0, 0, 0.8); /* Dark background for the chart */
         padding: 10px;
