--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
     <button onclick="searchCard()">Search</button>
     <div id="cardDetails"></div>
 </div>
+<div id="endTurnSection" style="margin-top: 20px;">
+    <button onclick="addNewTurn()">End Turn</button>
+</div>
 <div id="progressChartContainer">
     <h2>Progress Graph</h2>
     <canvas id="progressChart"></canvas>
