--- a/index.html
+++ b/index.html
@@ -293,50 +293,34 @@
 
     // Load JSON and game state on Page Load
     document.addEventListener("DOMContentLoaded", () => {
-        loadJSONData();
-        loadGameState();
-    });
-</script>
-    <!-- Personal Introduction Text Box -->
-<div id="personalIntro" style="margin-top: 50px; padding: 20px; background: rgba(239, 126, 55, 0.9); color: #000000; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-    <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;">About Me and the App</h2>
-    <p>Hi there!<br> Welcome to my App! My name is Kami :)</p> 
-    <p>As a huge Terraforming Mars fan, I decided to create this app to help players easily track their progress in Terraforming Mars. </p>
-    <p>Originally, the main intention was (and still is) to track VPs and Tags, which are the two main reasons why we keep all the cards face up on the table. It can take a lot of space on the table, especially if you don't own a large boardgame table. With this app, you can simply stack your played cards and put them aside, not having to worry about their visibility all the time.</p>
-    <p>This app also helps you manage resources (not implemented yet), track tags, VPs and enjoy your game more efficiently without the hassle of manual calculations. I hope you find it as fun and useful as I intended it to be! If you have any feedback, please contact me via killionaire23ttv@gmail.com. I'd love to hear from you!</p>
-    <p>As a little something extra, here is a photo of the designer of Terraforming Mars/co-owner of Fryxgames Jacob Fryxelius and I, posing with a custom TM card I made for Spiel Essen in '24 for giggles. Before you ask, yes, while it was not my intention, he did insist on giving me a 50% off! What a lad!</p>
+    const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
+    let vpCount = 0;
+    let trCount = 0;
 
-<!-- Personal Photo -->
-<div id="personalPhoto" style="margin-top: 50px;">
-    <img src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/IMG_20241003_123711%20-%20Copy.jpg" alt="My Photo" style="width: 800px; height: auto; border-radius: 10px;">
-</div>
-<script>
-    // JavaScript to handle VP, TR changes and chart setup
-
-    // Load Chart.js and create the chart
+    // Create the chart after DOM is loaded
     let ctx = document.getElementById('progressChart').getContext('2d');
     let progressChart = new Chart(ctx, {
         type: 'line',
         data: {
-            labels: [], // Labels for the x-axis (e.g., turns or actions)
+            labels: ['Turn 1'], // Start with the first turn
             datasets: [
                 {
                     label: 'Victory Points (VP)',
-                    data: [],
+                    data: [0], // Initial VP value
                     borderColor: 'rgba(255, 99, 132, 1)',
                     borderWidth: 2,
                     fill: false
                 },
                 {
                     label: 'Terraforming Rating (TR)',
-                    data: [],
+                    data: [0], // Initial TR value
                     borderColor: 'rgba(54, 162, 235, 1)',
                     borderWidth: 2,
                     fill: false
                 },
                 {
                     label: 'Total Tags',
-                    data: [],
+                    data: [0], // Initial Total Tags value
                     borderColor: 'rgba(75, 192, 192, 1)',
                     borderWidth: 2,
                     fill: false
@@ -364,15 +348,107 @@
         }
     });
 
-    function updateChart() {
-        const totalTags = Object.values(tagCounts).reduce((a, b) => a + b, 0);
-        const currentTurn = progressChart.data.labels.length + 1;
+    function changeCount(tag, delta) {
+        if (!document.getElementById(`${tag}Count`)) {
+            console.warn(`Tag element for "${tag}" not found.`);
+            return; // Safely skip if the tag does not exist in the HTML
+        }
+        tagCounts[tag] += delta;
+        if (tagCounts[tag] < 0) { tagCounts[tag] = 0; }
+        document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
+        updateTotalTags();
+        saveGameState(); // Save after updating tag counts
+    }
 
-        progressChart.data.labels.push('Turn ' + currentTurn);
+    function changeVP(delta) {
+        vpCount += delta;
+        if (vpCount < 0) { vpCount = 0; }
+        document.getElementById('vpNumber').innerText = vpCount;
+        saveGameState(); // Save after updating VP
+    }
+
+    function changeTR(delta) {
+        trCount += delta;
+        if (trCount < 0) { trCount = 0; }
+        document.getElementById('trCount').innerText = trCount;
+        saveGameState(); // Save after updating TR
+    }
+
+    function updateTotalTags() {
+        const total = Object.values(tagCounts).reduce((a, b) => a + b, 0);
+        document.getElementById('totalTags').innerText = `Total Tags: ${total}`;
+    }
+
+    function addNewTurn() {
+        // Function to add a new data point at the end of each turn
+        const totalTags = Object.values(tagCounts).reduce((a, b) => a + b, 0);
+
+        progressChart.data.labels.push(`Turn ${progressChart.data.labels.length + 1}`);
         progressChart.data.datasets[0].data.push(vpCount);
         progressChart.data.datasets[1].data.push(trCount);
         progressChart.data.datasets[2].data.push(totalTags);
 
+        progressChart.update();
+    }
+
+    function saveGameState() {
+        const gameState = {
+            vpCount,
+            trCount,
+            tagCounts,
+            chartData: {
+                labels: progressChart.data.labels,
+                datasets: progressChart.data.datasets.map(dataset => ({
+                    label: dataset.label,
+                    data: dataset.data
+                }))
+            }
+        };
+        localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
+    }
+
+    function loadGameState() {
+        const savedState = localStorage.getItem('terraformingMarsGameState');
+        if (savedState) {
+            const gameState = JSON.parse(savedState);
+            vpCount = gameState.vpCount || 0;
+            trCount = gameState.trCount || 0;
+            document.getElementById('vpNumber').innerText = vpCount;
+            document.getElementById('trCount').innerText = trCount;
+
+            Object.keys(gameState.tagCounts).forEach(tag => {
+                tagCounts[tag] = gameState.tagCounts[tag];
+                document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
+            });
+            updateTotalTags();
+
+            // Load chart data without duplicating entries
+            progressChart.data.labels = gameState.chartData.labels || ['Turn 1'];
+            gameState.chartData.datasets.forEach((dataset, index) => {
+                progressChart.data.datasets[index].data = dataset.data;
+            });
+
+            progressChart.update();
+        }
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+        loadGameState();
+    });
+
+    function resetGameState() {
+        vpCount = 0;
+        trCount = 0;
+        Object.keys(tagCounts).forEach(tag => {
+            tagCounts[tag] = 0;
+            document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
+        });
+        document.getElementById('vpNumber').innerText = vpCount;
+        document.getElementById('trCount').innerText = trCount;
+        updateTotalTags();
+        localStorage.removeItem('terraformingMarsGameState');
+        progressChart.data.labels = ['Turn 1'];
+        progressChart.data.datasets.forEach(dataset => dataset.data = [0]);
         progressChart.update();
     }
 
