--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     table { width: 100%; margin: 0 auto; border-collapse: collapse; background-color: rgba(0, 0, 0, 0.7); }
     th, td { padding: 10px; border: 1px solid #ccc; }
     th { background-color: rgba(255, 255, 255, 0.2); }
-    button { margin: 5px; padding: 5px 10px; background-color: #333; color: white; cursor: pointer; }
+    button { margin: 5px; padding: 5px 10px; background-color: #333; color: white; }
     img { max-width: 100%; width: 40px; height: auto; }
     h1, h2 { background-color: rgba(0, 0, 0, 0.6); padding: 10px; display: inline-block; border-radius: 10px;}
 
@@ -49,21 +49,7 @@
         font-weight: bold; /* Make numbers thicker */
         color: #ffffff; /* Ensure the numbers are visible */
     }
-
-    /* Style for making the graph much smaller and with a dark background */
-    #progressChartContainer {
-        width: 200px; /* Make the graph container much smaller */
-        margin: 20px auto;
-        background-color: rgba(0, 0, 0, 0.8); /* Dark background for the chart */
-        padding: 10px;
-        border-radius: 10px;
-    }
-    #progressChart {
-        max-width: 100%;
-        height: 150px;
-    }
 </style>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 <h1>Terraforming Mars Manager by Kami</h1>
@@ -132,76 +118,9 @@
     <button onclick="resetGameState()">Reset Game</button>
 </div>
 
-<!-- Chart Container -->
-<div id="progressChartContainer">
-    <h2>Progress Graph</h2>
-    <canvas id="progressChart"></canvas>
-</div>
-
-<!-- Add End Turn Button -->
-<div id="endTurnSection" style="margin-top: 20px;">
-    <button onclick="addNewTurn()">End Turn</button>
-</div>
-
 <script>
     const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
 
-    // VP and TR initial counts
-    let vpCount = 0;
-    let trCount = 0;
-
-    // Load Chart.js and create the chart
-    let ctx = document.getElementById('progressChart').getContext('2d');
-    let progressChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-            labels: ['Turn 1'], // Start with the first turn
-            datasets: [
-                {
-                    label: 'Victory Points (VP)',
-                    data: [0], // Initial VP value
-                    borderColor: 'rgba(255, 99, 132, 1)',
-                    borderWidth: 2,
-                    fill: false
-                },
-                {
-                    label: 'Terraforming Rating (TR)',
-                    data: [0], // Initial TR value
-                    borderColor: 'rgba(54, 162, 235, 1)',
-                    borderWidth: 2,
-                    fill: false
-                },
-                {
-                    label: 'Total Tags',
-                    data: [0], // Initial Total Tags value
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    borderWidth: 2,
-                    fill: false
-                }
-            ]
-        },
-        options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            scales: {
-                x: {
-                    title: {
-                        display: true,
-                        text: 'Turn/Action Number'
-                    }
-                },
-                y: {
-                    beginAtZero: true,
-                    title: {
-                        display: true,
-                        text: 'Count'
-                    }
-                }
-            }
-        }
-    });
-
-    // Function to handle tag changes
     function changeCount(tag, delta) {
         if (!document.getElementById(`${tag}Count`)) {
             console.warn(`Tag element for "${tag}" not found.`);
@@ -214,7 +133,12 @@
         saveGameState(); // Save after updating tag counts
     }
 
-    // Function to handle VP changes
+    function updateTotalTags() {
+        const total = Object.values(tagCounts).reduce((a, b) => a + b, 0);
+        document.getElementById('totalTags').innerText = `Total Tags: ${total}`;
+    }
+
+    let vpCount = 0;
     function changeVP(delta) {
         vpCount += delta;
         if (vpCount < 0) { vpCount = 0; }
@@ -222,7 +146,7 @@
         saveGameState(); // Save after updating VP
     }
 
-    // Function to handle TR changes
+    let trCount = 0;
     function changeTR(delta) {
         trCount += delta;
         if (trCount < 0) { trCount = 0; }
@@ -230,45 +154,60 @@
         saveGameState(); // Save after updating TR
     }
 
-    // Update the total tags displayed
-    function updateTotalTags() {
-        const total = Object.values(tagCounts).reduce((a, b) => a + b, 0);
-        document.getElementById('totalTags').innerText = `Total Tags: ${total}`;
+    let cardsDatabase = [];
+
+    // Load JSON Data and handle any errors
+    async function loadJSONData() {
+        try {
+            console.log("Attempting to load JSON...");
+            const response = await fetch('Card_Database_with_Numbers.json');
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
+            const data = await response.json();
+            cardsDatabase = data;
+            console.log("JSON Data Loaded Successfully:", cardsDatabase);
+        } catch (error) {
+            console.error("Error loading JSON:", error);
+            document.getElementById("cardDetails").innerHTML = "<p>Error loading card data. Check console for details.</p>";
+        }
     }
 
-    // Function to add a new turn and update the chart at the end of each turn
-    function addNewTurn() {
-        // Calculate the total tags for the current state
-        const totalTags = Object.values(tagCounts).reduce((a, b) => a + b, 0);
+    // Search Card by Card Number and update VP and tags
+    function searchCard() {
+        const cardInput = document.getElementById('cardNumberInput').value.trim();
+        const isNumeric = /^\d+$/.test(cardInput);
+        const cardNumber = isNumeric ? parseInt(cardInput, 10) : cardInput;
+        const card = cardsDatabase.find(c => c['Card Number'] === cardNumber);
 
-        // Add new labels and data points to the chart if needed
-        progressChart.data.labels.push(`Turn ${progressChart.data.labels.length + 1}`);
-        progressChart.data.datasets[0].data.push(vpCount);
-        progressChart.data.datasets[1].data.push(trCount);
-        progressChart.data.datasets[2].data.push(totalTags);
+        if (card) {
+            changeVP(Number(card.VP) || 0);
+            Object.keys(card).forEach(key => {
+                if (key.startsWith("Tag:") && card[key] === 1) {
+                    const tag = key.replace("Tag: ", "").toLowerCase();
+                    changeCount(tag, 1);
+                }
+            });
 
-        progressChart.update();
-        saveGameState(); // Save after updating the chart
+            document.getElementById("cardDetails").innerHTML = `<p>Found card: ${card['Card Name']} with VP: ${card.VP}</p>`;
+            console.log("Card found:", card); 
+        } else {
+            document.getElementById("cardDetails").innerHTML = "<p>Card not found. Please try a different number.</p>";
+            console.log("Card not found:", cardInput); 
+        }
     }
 
-    // Function to save the game state
+    // Save game state to local storage
     function saveGameState() {
         const gameState = {
             vpCount,
             trCount,
-            tagCounts,
-            chartData: {
-                labels: progressChart.data.labels,
-                datasets: progressChart.data.datasets.map(dataset => ({
-                    label: dataset.label,
-                    data: dataset.data
-                }))
-            }
+            tagCounts
         };
         localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
     }
 
-    // Function to load the saved game state
+    // Load game state from local storage
     function loadGameState() {
         const savedState = localStorage.getItem('terraformingMarsGameState');
         if (savedState) {
@@ -283,18 +222,10 @@
                 document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
             });
             updateTotalTags();
-
-            // Load chart data without duplicating entries
-            progressChart.data.labels = gameState.chartData.labels.slice(0); // Copy the saved labels
-            gameState.chartData.datasets.forEach((dataset, index) => {
-                progressChart.data.datasets[index].data = dataset.data.slice(0); // Copy saved data to avoid unintended reference
-            });
-
-            progressChart.update();
         }
     }
 
-    // Function to reset the game state
+    // Reset game state
     function resetGameState() {
         vpCount = 0;
         trCount = 0;
@@ -306,9 +237,6 @@
         document.getElementById('trCount').innerText = trCount;
         updateTotalTags();
         localStorage.removeItem('terraformingMarsGameState'); // Clear saved state
-        progressChart.data.labels = ['Turn 1'];
-        progressChart.data.datasets.forEach(dataset => dataset.data = [0]);
-        progressChart.update();
     }
 
     // Load JSON and game state on Page Load
@@ -317,5 +245,20 @@
         loadGameState();
     });
 </script>
+    <!-- Personal Introduction Text Box -->
+<div id="personalIntro" style="margin-top: 50px; padding: 20px; background: rgba(239, 126, 55, 0.9); color: #000000; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+    <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;">About Me and the App</h2>
+    <p>Hi there!<br> Welcome to my App! My name is Kami :)</p> 
+    <p>As a huge Terraforming Mars fan, I decided to create this app to help players easily track their progress in Terraforming Mars. </p>
+    <p>Originally, the main intention was (and still is) to track VPs and Tags, which are the two main reasons why we keep all the cards face up on the table. It can take a lot of space on the table, especially if you don't own a large boardgame table. With this app, you can simply stack your played cards and put them aside, not having to worry about their visibility all the time.</p>
+    <p>This app also helps you manage resources (not implemented yet), track tags, VPs and enjoy your game more efficiently without the hassle of manual calculations. I hope you find it as fun and useful as I intended it to be! If you have any feedback, please contact me via killionaire23ttv@gmail.com. I'd love to hear from you!</p>
+    <p>As a little something extra, here is a photo of the designer of Terraforming Mars/co-owner of Fryxgames Jacob Fryxelius and I, posing with a custom TM card I made for Spiel Essen in '24 for giggles. Before you ask, yes, while it was not my intention, he did insist on giving me a 50% off! What a lad!</p>
+
+<!-- Personal Photo -->
+<div id="personalPhoto" style="margin-top: 50px;">
+    <img src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/IMG_20241003_123711%20-%20Copy.jpg" alt="My Photo" style="width: 800px; height: auto; border-radius: 10px;">
+</div>
+
+
 </body>
 </html>
