--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
 <div id="resetSection" style="margin-top: 50px;">
     <button onclick="resetGameState()">Reset Game</button>
 </div>
+<!-- Link to Rulebook -->
+<p>
+    <a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFA500; text-decoration: underline;">
+        View the Official Rulebook
+    </a>
+</p>
 
 <script>
     const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
