--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </div>
 <!-- Link to Rulebook -->
 <p>
-     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;"><a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFA500; text-decoration: underline;">
+     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;"><a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFA500;">
         View the Official Rulebook
     </a></h2>
 </p>
