--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 </div>
 <!-- Link to Rulebook -->
 <p>
-     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;"><a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFA500;">
-        View the Official Rulebook
+     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;"><a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFFFFF;">
+        Official Rulebook
     </a></h2>
 </p>
 
