--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <button onclick="changeVP(1)">Add VP</button>
     <button onclick="changeVP(-1)">Remove VP</button>
 </div>
-
+<hr style="border: 1px solid #FFA500;">
 <!-- Card Search by Number -->
 <div id="cardLookupSection">
     <h2>Search Card by Number</h2>
