--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!-- Tag Tracker Table with All Tags -->
 <table>
 <thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
-<tbody id="tagTable">
+<tbody id="tagTable", max-width: 800px>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Earth.png"/> Earth </td><td><span id="earthCount">0</span></td>
 <td><button onclick="changeCount('earth', 1)">+</button><button onclick="changeCount('earth', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Space.png"/> Space </td><td><span id="spaceCount">0</span></td>
