--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Kami's Terraforming Mars Tag Manager</title>
 <style>
+     /* Styles for search bar and button */
+    #cardLookupSection {
+        max-width: 800px; /* Limit width to match the table */
+        margin: 20px auto; /* Center the section */
+    }
     /* Styling for body, table, and cards */
     body {
         font-family: Arial, sans-serif;
