--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     th, td { padding: 10px; border: 1px solid #ccc; }
     th { background-color: rgba(255, 255, 255, 0.2); }
     button { margin: 5px; padding: 5px 10px; background-color: #333; color: white; }
-    img { max-width: 100%; width: 40px; height: auto; }
+    img { max-width: 100%; width: 40px; height: auto; display: block; margin: 0 auto;}
     h1, h2 { background-color: rgba(0, 0, 0, 0.6); padding: 10px; display: inline-block; border-radius: 10px;}
 
     /* Add these new styles for the VP Tracker Icon */
