--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Kami's Terraforming Mars Tag Manager</title>
 <style>
+     button.increment {
+    margin-right: 10px; /* Adds space between + and - buttons */
+     }
+
      /* Styles for search bar and button */
     #cardLookupSection {
         max-width: 800px; /* Limit width to match the table */
