--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </style>
 </head>
 <body>
-<h1>Terraforming Mars Manager by Kami</h1>
+<h1>Tag and VP Trackers</h1>
 
 <!-- Tag Tracker Table with All Tags -->
 <table>
