--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 <h1>Tag Tracker</h1>
-
+<p> Scroll down for VP Tracker </p>
 <!-- Tag Tracker Table with All Tags -->
 <table>
 <thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
