--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 </style>
 </head>
 <body>
-<h1>Tag Tracker</h1>
-<p> Scroll down for VP Tracker </p>
+<h1>Tag and VP Tracker</h1>
+
 <!-- Tag Tracker Table with All Tags -->
 <table>
 <thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
