--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 </head>
 <body>
 <h1>Tag and VP Tracker</h1>
+<button onclick="window.location.href='destination.html'">Go to Another Page</button>
 
 <!-- Tag Tracker Table with All Tags -->
 <table>
