--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
 </style>
 </head>
 <body>
-<button onclick="window.location.href='resources.html'">Resources</button>
-<h1>Tag and VP Tracker</h1>
-<button onclick="window.location.href='destination.html'">History</button>
+<h1>Tag Tracker</h1>
 
 <!-- Tag Tracker Table with All Tags -->
 <table>
@@ -123,6 +121,9 @@
 <div id="resetSection" style="margin-top: 50px;">
     <button onclick="resetGameState()">Reset Game</button>
 </div>
+     
+<h2>Resources</h2>
+     
 <!-- Link to Rulebook -->
 <p>
      <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;"><a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFFFFF;">
