--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
             background-clip: padding-box;  /* Ensures the gradient does not spill into border */
             position: relative; /* Allows the pseudo-elements to be positioned */
         }
-
+     
+    /* General Box Styling similar to the About Me and My App section */
+    .resource-tracker-box {
+        max-width: 800px;
+        margin: 20px auto;
+        padding: 20px;
+        background: rgba(239, 126, 55, 0.9); /* Similar to the About Me section */
+        color: #000000;
+        border-radius: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
         /* Futuristic Corners using Pseudo-elements */
         #personalIntro::before, #personalIntro::after {
             content: "";
