--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
     <!-- Resources Buttons - 2 Rows of 3 Buttons -->
     <div class="resources-container">
         <div class="resources-row">
-            <button class="resource-button">Resource 1</button>
-            <button class="resource-button">Resource 2</button>
-            <button class="resource-button">Resource 3</button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Credits.png" alt="Energy"></button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Steel.png" alt="Heat"></button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Titanium.png" alt="Plants"></button>
         </div>
         <div class="resources-row">
-            <button class="resource-button">Resource 4</button>
-            <button class="resource-button">Resource 5</button>
-            <button class="resource-button">Resource 6</button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Plants.png" alt="Steel"></button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Energy.png" alt="Titanium"></button>
+            <button class="resource-button"><img src="https://killionaire23.github.io/Terraforming-Mars/Heat.png" alt="Credits"></button>
         </div>
     </div>
 
