--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         padding: 15px;
         margin: 0 5px;
         font-size: 1em;
-        background-color: #444;
+        background-color: ##e6e3e3;
         color: white;
         border: none;
         border-radius: 10px;
@@ -142,7 +142,7 @@
 
     /* Make the button stand out a bit when hovered */
     .resource-button:hover {
-        background-color: #666;
+        background-color: #fff;
     }
 
     /* Produce Button */
