--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         max-width: 800px;
         margin: 20px auto;
         padding: 20px;
-        background: rgba(0, 0, 0, 0.9); /* Similar to the About Me section */
+        background: url('https://killionaire23.github.io/TMMobile/ResourceBackground.jpg') no-repeat center center;
         color: #000000;
         border-radius: 15px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
