--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
         max-width: 800px;
         margin: 20px auto;
         padding: 20px;
-        background: url('https://killionaire23.github.io/TMMobile/ResourceBackground.jpg') no-repeat center center;
+        background-image: url('https://killionaire23.github.io/Terraforming-Mars/ResourceBackground.jpg');
+        background-size: cover; /* Ensure the image covers the entire box */
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: scroll; /* Make sure it's scrollable for mobile devices */
         color: #000000;
         border-radius: 15px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
