--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         width: 100%;
         padding: 20px;
         font-size: 1.5em;
-        border: none;
+        border: lined #999999;
         background-color: #e6e3e3;
         color: black;
         cursor: pointer;
@@ -139,7 +139,7 @@
         font-size: 1em;
         background-color: #e6e3e3;
         color: black;
-        border: none;
+        border: lined #999999;
         border-radius: 10px;
         cursor: pointer;
         box-shadow: 0 0px 30px rgba(0, 0, 0, 0.4);
@@ -157,7 +157,7 @@
         margin-top: 20px;
         padding: 10px;
         font-size: 1.2em;
-        border: none;
+        border: lined #999999;
         background-color: #e6e3e3;
         color: black;
         cursor: pointer;
