--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         width: 100%;
         padding: 20px;
         font-size: 1.5em;
-        border: lined #999999;
+        border: 3px solid #8f8f8f;
         background-color: #e6e3e3;
         color: black;
         cursor: pointer;
@@ -135,11 +135,10 @@
         flex: 1;
         padding: 15px;
         margin: 0 5px;
-        border: 5px solid;
+        border: 3px solid #8f8f8f;
         font-size: 1em;
         background-color: #e6e3e3;
         color: black;
-        border: lined #999999;
         border-radius: 10px;
         cursor: pointer;
         box-shadow: 0 0px 30px rgba(0, 0, 0, 0.4);
@@ -157,7 +156,7 @@
         margin-top: 20px;
         padding: 10px;
         font-size: 1.2em;
-        border: lined #999999;
+        border: 3px solid #8f8f8f;
         background-color: #e6e3e3;
         color: black;
         cursor: pointer;
