--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <!-- Resource Tracker Section with Background Box -->
 <div class="resource-tracker-box">
     <!-- Terraforming Rating Button -->
-    <button class="terraforming-button">Terraforming Rating</button>
+    <button class="terraforming-button"><img src="https://killionaire23.github.io/TMMobile/TR.png" alt="TR"></button>
     
     <!-- Resources Buttons - 2 Rows of 3 Buttons -->
     <div class="resources-container">
